First edit about and index pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "&lambda; Lab"
-desc: The online home of the Pearson Lab at Duke University
+desc: Neerja Katiyar's website
 ishome: yes
 ---
 
