Modified index file

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@ ishome: yes
       <h3><a href="research.html">Research</a></h3>
       <p>Learn more about our research</p>
       <div class="panel-body" style="height: 240px; overflow-y: scroll">
-        <li><a href="research.html"> How do neurons see the world? </a></li><br>
-        <li><a href="research.html"> Opening up the skull </a></li><br>
-        <li><a href="research.html"> Eye tracking unplugged </a></li><br>
+        <li><a href="research.html"> RNA Sequencing </a></li><br>
+        <li><a href="research.html"> Whole genome sequencing </a></li><br>
+        <li><a href="research.html"> Variant Analysis </a></li><br>
+        <li><a href="research.html"> Metagenomics </a></li><br>
+
       </div>
       <p><a class="btn btn-default" style="border:none" href="research.html" role="button">More &raquo;</a></p>
     </div>
   </div>
   <div class="col-sm-4">
     <div class="panel panel-primary" style="padding: 0px 20px">
-      <h3><a href="https://pearsonlab.github.io/blog/">Blog</a></h3>
+      <h3><a href="https://nkatiyar.github.io/blog/">Blog</a></h3>
       <p>Most recent posts</p>
       <div class="panel-body" style="height: 240px; overflow-y: scroll">
         {% for post in site.categories.blog limit: 5 %}
@@ -50,19 +52,19 @@ ishome: yes
 <div class="row">
   <div class="col-sm-4">
     <p align="center">
-    <a href="https://github.com/pearsonlab"><img src="/images/github_logo.png" margin-bottom: 10px" width="45px">
+    <a href="https://github.com/nkatiyar"><img src="/images/github_logo.png" margin-bottom: 10px" width="45px">
     </p>
     <h4 align="center">Code on GitHub</h4></a>
   </div>
   <div class="col-sm-4">
     <p align="center">
-    <a href="https://pearsonlab.github.io/people.html"><img src="/images/plab_hex_icon_gray.png" margin-bottom: 10px" width="45px">
+    <a href="https://nkatiyar.github.io/people.html"><img src="/images/plab_hex_icon_gray.png" margin-bottom: 10px" width="45px">
     </p>
     <h4 align="center">Who We Are</h4></a>
   </div>
   <div class="col-sm-4">
     <p align="center">
-    <a href="https://pearsonlab.github.io/location.html"><img src="/images/dibs_logo.jpg" margin-bottom: 10px" width="51px">
+    <a href="https://nkatiyar.github.io/location.html"><img src="/images/dibs_logo.jpg" margin-bottom: 10px" width="51px">
     </p>
     <h4 align="center">Find Us</h4></a>
   </div>
