Add presentations to tab

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@ ishome: yes
       <p><a class="btn btn-default" style="border:none" href="publications.html" role="button">More &raquo;</a></p>
     </div>
   </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="panel panel-primary" style="padding: 0px 20px">
+      <h3><a href="pubs.html">Presentations</a></h3>
+      <p>Our latest works</p>
+      <div class="panel-body" style="height: 240px; overflow-y: scroll">
+        {% include presentations.html %}
+      </div>
+      <p><a class="btn btn-default" style="border:none" href="presentations.html" role="button">More &raquo;</a></p>
+    </div>
+  </div>
 </div>
 
 <br>
